# i9_smart_pdv_desktop_electron

./: .releaserc.json  CHANGELOG.md  INSTRUCOES-DESKTOP-SUBMODULE.md  Makefile
.claude/: CLAUDE.md
.github/workflows/: release.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURACOES-SISTEMA.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT.md  FAQ.md  MIGRATION.md  PERFORMANCE.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md
docs/agents/: BUSCA-FULLTEXT.md  COMPARTILHAMENTO-CADASTROS.md  FUNCIONALIDADES.md  INFRAESTRUTURA-POSTO.md  MULTI-EMPRESA.md  PLANO-REFATORACAO-FISCAL.md  README.md  TRIBUTOS.md
docs/agents/continuous/: QA-REVIEW.md  TECHNICAL-WRITER.md
docs/agents/reports/: A01-INITIALIZATION-REPORT.md
docs/agents/shared/: CODE-STANDARDS.md
docs/especialistas/: ESPECIALISTA-FISCAL-TRIBUTARIO.md
pdv_desktop/: .gitignore  Makefile  README.md  config.json  package-lock.json  package.json
pdv_desktop/src-tauri/: Cargo.toml  tauri.conf.json
pdv_desktop/src-tauri/icons/: icon.icns
pdv_desktop/src-tauri/src/: main.rs
scripts/: README.md  backup.sh  clean.sh  install-deps.sh  start-dev.sh
src-tauri/icons/: icon.icns
